--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-icons": "^5.0.1",
     "supabase": "^1.153.4",
     "tailwind-merge": "^2.2.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
